--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*!
 Theme Name: diario
-Theme URI: http://underscores.me/
+Theme URI: 
 Author: Jose Guerra
 Author URI: https://jguerra.dev
 Description: A clean classic blog setup with custom homepage
-Version: 1.0.0
+Version: 2.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: diario
