--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,9 +46,9 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "mixins/mixins-master";
 
 /*--------------------------------------------------------------
-# Normalize
+# Bootstrap Reboot
 --------------------------------------------------------------*/
-@import "normalize";
+@import "bootstrap-reboot";
 
 /*--------------------------------------------------------------
 # Typography
